add more comments.

--- a/README.org
+++ b/README.org
@@ -34,7 +34,7 @@
   * Source code author: Jianbin Qin
   * Version: 0.1 (Only experimental)
   * Contact: jqin@inf.ed.ac.uk
-  * More information: http://qinjianibn.com/
+  * More information: http://qinjianbin.com/
 
 * Introduction:
   * Title: VChunkJoin: An Efficient Algorithm for Edit Similarity Joins
